Adding link to main page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
                     </ul>
                     <div class="button text-center mb-4">
-                        <button class="btn btn-lg btn-light">EXPLORE</button>
+                        <a class="btn btn-lg btn-light" href="https://societies.froshtiet.com/">EXPLORE</a>
                     </div>
                 </div>
             </div>
