--- a/index.html
+++ b/index.html
@@ -14,19 +14,26 @@
     <main>
         <div class="overlay"></div>
         <div class="intro">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <h1 class="text-center pt-3 welcome">SOCIETY FAIR</h1>
-                    </div>
+            <h1 class="text-center pt-3 welcome">SOCIETY FAIR</h1>
+            <div class="container center-this">
+                <div class="row main-div">
                     <div class="col-12 col-lg-6 pt-5">
                         <h2 class="welcome-2">Welcome Freshers!</h2>
-                        <p class="lead">Society fair is the most vibrant exhibition of all societies offered in TIET with the aim to encourage innovation and experimentation, and to provide the students with enriching opportunities in their fields of interest to ensure dynamic overall development. With a plethora of departmental societies and student chapters, TIET boasts of more than 60 societies, all of which are registered under the guidance and supervision of our experienced faculty members. Frosh brings all the societies to your table so you can take your pick and achieve unimaginable heights.</p>
+                        <p class="lead">Society fair is the most vibrant exhibition of all societies offered in TIET
+                            with the aim to encourage innovation and experimentation, and to provide the students with
+                            enriching opportunities in their fields of interest to ensure dynamic overall development.
+                            With a plethora of departmental societies and student chapters, TIET boasts of more than 60
+                            societies, all of which are registered under the guidance and supervision of our experienced
+                            faculty members. Frosh brings all the societies to your table so you can take your pick and
+                            achieve unimaginable heights.</p>
                     </div>
                     <div class="col-12 col-lg-6 pt-5 d-flex align-items-center mb-4">
-                        <iframe src="https://www.youtube.com/embed/G8AT01tuyrk?controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/G8AT01tuyrk?controls=0" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                     </div>
                 </div>
+
             </div>
         </div>
     </main>
@@ -37,15 +44,24 @@
                 <div class="col-12">
                     <h2 class="welcome-2 pt-4 text-center">GUIDELINES</h2>
                     <ul class="pl-3">
-                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
-                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
-                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
-                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
-                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
-                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
-                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
-                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
-                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
+                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum
+                            possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
+                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum
+                            possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
+                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum
+                            possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
+                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum
+                            possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
+                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum
+                            possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
+                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum
+                            possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
+                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum
+                            possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
+                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum
+                            possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
+                        <li class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente maxime rerum
+                            possimus temporibus architecto dolores optio, magni deserunt culpa officia!</li>
                     </ul>
                     <div class="button text-center mb-4">
                         <a class="btn btn-lg btn-light" href="https://societies.froshtiet.com/">EXPLORE</a>
@@ -54,7 +70,7 @@
             </div>
         </div>
     </div>
-    
+
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
