--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <li class="lead">At the start of the event, head to www.froshtiet.com/society-fair</li>
                         <li class="lead">Navigate to the list of all societies and explore the various tabs and tiles you see.</li>
                         <li class="lead">Join the Zoom meeting of the respective society to ask queries and know more about them. Please note that you may have to wait in the Waiting Room of the Zoom meeting.</li>
-                        <li class="lead"Any kind of nuisance created during any Zoom meeting will be dealt with severely</li>                      
+                        <li class="lead">Any kind of nuisance created during any Zoom meeting will be dealt with severely</li>                      
                     </ul>
                     <div class="button text-center mb-4">
                         <a class="btn btn-lg btn-light" href="https://societies.froshtiet.com/">EXPLORE</a>
