--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                             achieve unimaginable heights.</p>
                     </div>
                     <div class="col-12 col-lg-6 pt-5 d-flex align-items-center mb-4">
-                        <iframe src="https://www.youtube.com/embed/DJJWAgYGV4o?controls=0" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                        
+                        <img src="assets/soc.jpg" style="height:500px;padding:5px;" alt="POSTER">
+                    
                     </div>
                 </div>
 
