--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="col-12 col-lg-6 pt-5 d-flex align-items-center mb-4">
                         
-                        <img src="assets/soc.jpg" style="height:500px;padding:5px;" alt="POSTER">
+                        <img src="Assets/soc.jpg" style="height:500px;padding:5px;" alt="POSTER">
                     
                     </div>
                 </div>
