--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
                             faculty members. Frosh brings all the societies to your table so you can take your pick and
                             achieve unimaginable heights.</p>
                     </div>
-                    <div class="col-12 col-lg-6 pt-5 d-flex align-items-center mb-4">
-                        
-                        <img src="Assets/soc.jpg" style="height:500px;padding:5px;" alt="POSTER">
-                    
+                    <div class="col-12 col-lg-6 pt-5 d-flex align-items-center justify-content-center mb-4">
+                        <img src="Assets/soc.jpg" class="text-center" style="height:400px" alt="POSTER">
+
                     </div>
                 </div>
 
@@ -44,11 +43,16 @@
                 <div class="col-12">
                     <h2 class="welcome-2 pt-4 text-center">GUIDELINES</h2>
                     <ul class="pl-3">
-                        <li class="lead pt-3">Students are advised to explore as many societies as possible to discover the societies that best suit their interests.</li>
+                        <li class="lead pt-3">Students are advised to explore as many societies as possible to discover
+                            the societies that best suit their interests.</li>
                         <li class="lead pt-3">At the start of the event, head to www.froshtiet.com/society-fair</li>
-                        <li class="lead pt-3">Navigate to the list of all societies and explore the various tabs and tiles you see.</li>
-                        <li class="lead pt-3">Join the Zoom meeting of the respective society to ask queries and know more about them. Please note that you may have to wait in the Waiting Room of the Zoom meeting.</li>
-                        <li class="lead pt-3">Any kind of nuisance created during any Zoom meeting will be dealt with severely</li>                      
+                        <li class="lead pt-3">Navigate to the list of all societies and explore the various tabs and
+                            tiles you see.</li>
+                        <li class="lead pt-3">Join the Zoom meeting of the respective society to ask queries and know
+                            more about them. Please note that you may have to wait in the Waiting Room of the Zoom
+                            meeting.</li>
+                        <li class="lead pt-3">Any kind of nuisance created during any Zoom meeting will be dealt with
+                            severely</li>
                     </ul>
                     <div class="button text-center mb-4">
                         <a class="btn btn-lg btn-light" href="https://societies.froshtiet.com/">EXPLORE</a>
