--- a/index.html
+++ b/index.html
@@ -5,57 +5,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Society Fair</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <main>
         <div class="overlay"></div>
         <div class="intro">
-            <h1 class="text-center pt-3 welcome">SOCIETY FAIR</h1>
+            <h1 class="text-center pt-3 welcome" style="font-family: 'Bungee Inline', cursive;font-size: 8vh;">SOCIETY FAIR</h1>
             <div class="container center-this">
                 <div class="row main-div">
-                    <div class="col-12 col-lg-6 pt-5">
-                        <h2 class="welcome-2">Welcome Freshers!</h2>
-                        <p class="lead">Society fair is the most vibrant exhibition of all societies offered in TIET
-                            with the aim to encourage innovation and experimentation, and to provide the students with
-                            enriching opportunities in their fields of interest to ensure dynamic overall development.
-                            With a plethora of departmental societies and student chapters, TIET boasts of more than 60
-                            societies, all of which are registered under the guidance and supervision of our experienced
-                            faculty members. Frosh brings all the societies to your table so you can take your pick and
-                            achieve unimaginable heights.</p>
+                    <div class="col-12 col-lg-6 pt-5 d-flex align-items-center mb-4">
+                        <img src="assets/soc.jpg" style="display: block;
+                        margin-left: auto;
+                        margin-right: auto;
+                        width: 70%;" alt="POSTER">
                     </div>
-                    <div class="col-12 col-lg-6 pt-5 d-flex align-items-center justify-content-center mb-4">
-                        <img src="Assets/soc.jpg" class="text-center" style="height:400px" alt="POSTER">
+                    <div class="col-12 col-lg-6 pt-5">
+                        <h2 class="welcome-3">Welcome Freshers!</h2>
+                        <p class="lead">Society fair is the most vibrant exhibition of all societies offered in TIET with the aim to encourage innovation and experimentation, and to provide the students with enriching opportunities in their fields of interest to ensure
+                            dynamic overall development. With a plethora of departmental societies and student chapters, TIET boasts of more than 60 societies, all of which are registered under the guidance and supervision of our experienced faculty members.
+                            Frosh brings all the societies to your table so you can take your pick and achieve unimaginable heights.</p>
 
+                        <button type="button" style="margin-right:5px; box-shadow: 1px 1px 10px #2f8aeb" class="btn btn-primary btn-lg">Wall Of Frosh</button>
+
+
+
+                        <button type="button" style=" box-shadow: 1px 1px 10px #2f8aeb" class="btn btn-primary btn-lg">Society Fair</button>
+                        <br>
                     </div>
                 </div>
-
             </div>
         </div>
+        <br>
     </main>
     <div class="guide">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="welcome-2 pt-4 text-center">GUIDELINES</h2>
+                    <h2 class="welcome-3 pt-4 text-center">GUIDELINES</h2>
                     <ul class="pl-3">
-                        <li class="lead pt-3">Students are advised to explore as many societies as possible to discover
-                            the societies that best suit their interests.</li>
+                        <li class="lead pt-3">Students are advised to explore as many societies as possible to discover the societies that best suit their interests.</li>
                         <li class="lead pt-3">At the start of the event, head to www.froshtiet.com/society-fair</li>
-                        <li class="lead pt-3">Navigate to the list of all societies and explore the various tabs and
-                            tiles you see.</li>
-                        <li class="lead pt-3">Join the Zoom meeting of the respective society to ask queries and know
-                            more about them. Please note that you may have to wait in the Waiting Room of the Zoom
-                            meeting.</li>
-                        <li class="lead pt-3">Any kind of nuisance created during any Zoom meeting will be dealt with
-                            severely</li>
+                        <li class="lead pt-3">Navigate to the list of all societies and explore the various tabs and tiles you see.</li>
+                        <li class="lead pt-3">Join the Zoom meeting of the respective society to ask queries and know more about them. Please note that you may have to wait in the Waiting Room of the Zoom meeting.</li>
+                        <li class="lead pt-3">Any kind of nuisance created during any Zoom meeting will be dealt with severely</li>
                     </ul>
+                    <br>
                     <div class="button text-center mb-4">
-                        <a class="btn btn-lg btn-light" href="https://societies.froshtiet.com/">EXPLORE</a>
+                        <a class="btn btn-lg btn-light" style=" box-shadow: 1px 1px 10px white" href="https://societies.froshtiet.com/">EXPLORE</a>
                     </div>
                 </div>
             </div>
@@ -64,15 +65,9 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 
 </html>
