--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="container center-this">
                 <div class="row main-div">
                     <div class="col-12 col-lg-6 pt-5 d-flex align-items-center mb-4">
-                        <img src="assets/soc.jpg" style="display: block;
+                        <img src="Assets/soc.jpg" style="display: block;
                         margin-left: auto;
                         margin-right: auto;
                         width: 70%;" alt="POSTER">
@@ -29,7 +29,7 @@
                             dynamic overall development. With a plethora of departmental societies and student chapters, TIET boasts of more than 60 societies, all of which are registered under the guidance and supervision of our experienced faculty members.
                             Frosh brings all the societies to your table so you can take your pick and achieve unimaginable heights.</p>
 
-                        <button type="button" style="margin-right:5px; box-shadow: 1px 1px 10px #2f8aeb" class="btn btn-primary btn-lg">Wall Of Frosh</button>
+                        <button type="button" style="margin-right:5px; box-shadow: 1px 1px 10px #2f8aeb" class="btn btn-primary btn-lg" onclick="window.location='/wall-of-frosh'">Wall Of Frosh</button>
 
 
 
