--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
 
-                        <button type="button" style=" box-shadow: 1px 1px 10px #2f8aeb" class="btn btn-primary btn-lg">Society Fair</button>
+                        <button type="button" style=" box-shadow: 1px 1px 10px #2f8aeb" class="btn btn-primary btn-lg" onclick="window.location='https://societies.froshtiet.com'">Society Fair</button>
                         <br>
                     </div>
                 </div>
